--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
             <artifactId>imgui-java-app</artifactId>
             <version>1.86.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
